--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="./index.css">
  </head>
  <body>
-    <div id="root"></div>
-    <!-- <script>
-      const heading =  document.createElement("h1");
-      heading.innerHTML = "Hellow World from JavaScript";
-      const root =document.getElementById("root");
-      root.appendChild(heading);
-    </script> -->
-
-
+    <div id="root"><h1>Not Render</h1></div>
 <script type="module" src="app.js"></script>
  </body>
  </html>
