--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
  </head>
  <body>
-    <div id="root"><h1>Radhe Radhe</h1></div>
+    <div id="root"><h1>Not Render</h1></div>
 <script type="module" src="./src/app.js"></script>
  </body>
  </html>
